# haskell-connectX

./: .gitignore  .gitlab-ci.yml  CHANGELOG  ConnectX.cabal  README.md
src/: ConnectX.hs
src/Bot/: Blue.hs  Red.hs
src/Commandline/: Options.hs
src/Data/: Board.hs  Cell.hs  Column.hs  Matrix.hs  Player.hs
src/Transition/: Mechanics.hs
